--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+     <link rel="icon" href="/favicon.ico" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -17,7 +17,7 @@
     />
     <!-- animate.css-->
 
-    <title>Svelte + Vite App</title>
+    <title>Tic tac Toe</title>
   </head>
   <body>
     <div id="app"></div>
